=== gtksourceview 2.4.1 ===

2008-11-01  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.4.1

2008-11-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/octave.lang: add some missing keywords
	Bug #556278, patch by Søren Hauberg.

2008-10-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/dot.lang: add lang file for graphviz.

2008-10-29  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.c: Override insert_pixbuf()
	and insert_child_anchor() methods to notify the syntax
	highlighting engine about the change. Bug #550687.

=== gtksourceview 2.4.0 ===

2008-09-08  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.4.0

=== gtksourceview 2.3.3 ===

2008-09-08  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.3

2008-09-08  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/java.lang: highlight escaped chars
	in strings

2008-09-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/sh.lang: fix typo (podp instead
	of popd). Bug #550687.

=== gtksourceview 2.3.2 ===

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.2

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/po.lang: highlight "fuzzy" and
	"msctxt". Patch by Bob Mauchin.

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/texinfo.lang:
	fix bug #549044, never ending @ignore block.

2008-08-30  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/python.lang: handle raw string
	separately since they do not contain escaped chars.

2008-08-27  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/xslt.lang: add lang file for xslt.