@@ -36,6 +36,7 @@
 #include <gtksourceview/gtksourcelanguagemanager.h>
 #include <gtksourceview/gtksourcestyleschememanager.h>
 #include <gtksourceview/gtksourceprintcompositor.h>
+#include <gtksourceview/gtksourceiter.h>
 #ifdef TEST_XML_MEM
 #include <libxml/xmlreader.h>
 #endif
@@ -59,7 +60,9 @@ static void       open_file_cb                   (GtkAction       *action,
 						  gpointer         user_data);
 static void       print_file_cb                  (GtkAction       *action,
 						  gpointer         user_data);
-static void       debug_thing_3_cb		 (GtkAction       *action,
+static void       find_cb			 (GtkAction       *action,
+						  gpointer         user_data);
+static void       replace_cb			 (GtkAction       *action,
 						  gpointer         user_data);
 
 static void       new_view_cb                    (GtkAction       *action,
@@ -112,8 +115,10 @@ static GtkActionEntry view_action_entries[] = {
 	{ "TabWidth", NULL, "_Tab Width" },
 	{ "IndentWidth", NULL, "I_ndent Width" },
 	{ "SmartHomeEnd", NULL, "_Smart Home/End" },
-	{ "DebugThing3", GTK_STOCK_FIND_AND_REPLACE, "Search and _Replace", "<control>R",
-	  "Search and Replace", G_CALLBACK (debug_thing_3_cb) },
+	{ "Find", GTK_STOCK_FIND, "_Find", "<control>F",
+	  "Find", G_CALLBACK (find_cb) },
+	{ "Replace", GTK_STOCK_FIND_AND_REPLACE, "Search and _Replace", "<control>R",
+	  "Search and Replace", G_CALLBACK (replace_cb) },
 };
 
 static GtkToggleActionEntry toggle_entries[] = {
@@ -228,7 +233,8 @@ static const gchar *buffer_ui_description =
 "    <menu action=\"FileMenu\">"
 "      <menuitem action=\"Open\"/>"
 "      <menuitem action=\"Print\"/>"
-"      <menuitem action=\"DebugThing3\"/>"
+"      <menuitem action=\"Find\"/>"
+"      <menuitem action=\"Replace\"/>"
 "      <separator/>"
 "      <menuitem action=\"Quit\"/>"
 "    </menu>"
@@ -616,21 +622,28 @@ new_view_cb (GtkAction *action, gpointer user_data)
 
 /* Buffer action callbacks ------------------------------------------------------------ */
 
+static struct {
+	char *what;
+	char *replacement;
+	GtkSourceSearchFlags flags;
+} search_data = {
+	NULL,
+	NULL,
+	GTK_SOURCE_SEARCH_CASE_INSENSITIVE
+};
+
 static gboolean
-replace_dialog (GtkWidget *widget,
-		char     **what_p,
-		char     **replacement_p)
+search_dialog (GtkWidget            *widget,
+	       gboolean              replace,
+	       char                **what_p,
+	       char                **replacement_p,
+	       GtkSourceSearchFlags *flags_p)
 {
 	GtkWidget *dialog;
 	GtkEntry *entry1, *entry2;
-	static char *what, *replacement;
+	GtkToggleButton *case_sensitive;
 
-	if (!what)
-		what = g_strdup ("gtk");
-	if (!replacement)
-		replacement = g_strdup ("boo");
-
-	dialog = gtk_dialog_new_with_buttons ("Replace",
+	dialog = gtk_dialog_new_with_buttons (replace ? "Replace" : "Find",
 					      GTK_WINDOW (gtk_widget_get_toplevel (widget)),
 					      GTK_DIALOG_MODAL,
 					      GTK_STOCK_CANCEL,
@@ -642,18 +655,26 @@ replace_dialog (GtkWidget *widget,
 
 	entry1 = g_object_new (GTK_TYPE_ENTRY,
 			       "visible", TRUE,
-			       "text", what ? what : "",
+			       "text", search_data.what ? search_data.what : "",
 			       "activates-default", TRUE,
 			       NULL);
 	gtk_box_pack_start_defaults (GTK_BOX (GTK_DIALOG (dialog)->vbox),
 				     GTK_WIDGET (entry1));
 	entry2 = g_object_new (GTK_TYPE_ENTRY,
-			       "visible", TRUE,
-			       "text", replacement ? replacement : "",
+			       "visible", replace,
+			       "text", search_data.replacement ? search_data.replacement : "",
 			       "activates-default", TRUE,
 			       NULL);
 	gtk_box_pack_start_defaults (GTK_BOX (GTK_DIALOG (dialog)->vbox),
 				     GTK_WIDGET (entry2));
+
+	case_sensitive = g_object_new (GTK_TYPE_CHECK_BUTTON,
+				       "visible", TRUE,
+				       "label", "Case sensitive",
+				       "active", !(search_data.flags & GTK_SOURCE_SEARCH_CASE_INSENSITIVE),
+				       NULL);
+	gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox),
+			    GTK_WIDGET (case_sensitive), FALSE, FALSE, 0);
 
 	while (TRUE)
 	{
@@ -667,45 +688,82 @@ replace_dialog (GtkWidget *widget,
 			break;
 	}
 
-	g_free (what);
-	*what_p = what = g_strdup (gtk_entry_get_text (entry1));
-	g_free (replacement);
-	*replacement_p = replacement = g_strdup (gtk_entry_get_text (entry2));
+	g_free (search_data.what);
+	*what_p = search_data.what = g_strdup (gtk_entry_get_text (entry1));
+	g_free (search_data.replacement);
+	*replacement_p = search_data.replacement = g_strdup (gtk_entry_get_text (entry2));
+	*flags_p = search_data.flags = gtk_toggle_button_get_active (case_sensitive) ?
+					0 : GTK_SOURCE_SEARCH_CASE_INSENSITIVE;
 
 	gtk_widget_destroy (dialog);
 	return TRUE;
 }
 
 static void
-debug_thing_3_cb (GtkAction *action,
-		  gpointer   user_data)
+do_search_replace (GtkTextView *view,
+		   gboolean     replace)
 {
-	GtkTextView *view = user_data;
 	GtkTextBuffer *buffer = gtk_text_view_get_buffer (view);
 	GtkTextIter iter;
 	char *what, *replacement;
+	GtkSourceSearchFlags flags;
 
-	if (!replace_dialog (GTK_WIDGET (view), &what, &replacement))
+	if (!search_dialog (GTK_WIDGET (view), replace, &what, &replacement, &flags))
 		return;
 
-	gtk_text_buffer_get_iter_at_offset (buffer, &iter, 0);
+	if (replace)
+	{
+		gtk_text_buffer_get_iter_at_offset (buffer, &iter, 0);
 
-	while (TRUE)
+		while (TRUE)
+		{
+			GtkTextIter match_start, match_end;
+
+			if (!gtk_source_iter_forward_search (&iter, what, flags,
+							     &match_start,
+							     &match_end,
+							     NULL))
+			{
+				break;
+			}
+
+			gtk_text_buffer_delete (buffer, &match_start, &match_end);
+			gtk_text_buffer_insert (buffer, &match_start, replacement, -1);
+			iter = match_start;
+		}
+	}
+	else
 	{
 		GtkTextIter match_start, match_end;
 
-		if (!gtk_text_iter_forward_search (&iter, what, 0,
-						   &match_start,
-						   &match_end,
-						   NULL))
-		{
-			break;
-		}
+		gtk_text_buffer_get_iter_at_mark (buffer, &iter, gtk_text_buffer_get_insert (buffer));
 
-		gtk_text_buffer_delete (buffer, &match_start, &match_end);
-		gtk_text_buffer_insert (buffer, &match_start, replacement, -1);
-		iter = match_start;
+		if (gtk_source_iter_forward_search (&iter, what, flags, &match_start, &match_end, NULL))
+		{
+			gtk_text_buffer_select_range (buffer, &match_start, &match_end);
+		}
+		else
+		{
+			GtkTextIter insert = iter;
+			gtk_text_buffer_get_start_iter (buffer, &iter);
+			if (gtk_source_iter_forward_search (&iter, what, flags, &match_start, &match_end, &insert))
+				gtk_text_buffer_select_range (buffer, &match_start, &match_end);
+		}
 	}
+}
+
+static void
+find_cb (GtkAction *action,
+	 gpointer   user_data)
+{
+	do_search_replace (user_data, FALSE);
+}
+
+static void
+replace_cb (GtkAction *action,
+	    gpointer   user_data)
+{
+	do_search_replace (user_data, TRUE);
 }
 
 static void
